--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,72 @@
-<html>
-	<head>
-		<title>PWSView</title>
-	</head>
-	<body>
-		<h1>Test</h1>
-	</body>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+
+    <title>PWS | Personal Weather Station</title>
+
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">PWS View</h3>
+              <ul class="nav masthead-nav">
+                <li class="active"><a href="/">View</a></li>
+                <li><a href="#">Setup Your Own</a></li>
+                <li><a href="#">Support Us</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">Personal Weather Station</h1>
+            <p class="lead">Type in your favorite personal weather station below.</p>
+            <p class="lead">
+            	<div class="input-group">
+              	<input type="text" placeholder="Weather Underground Station ID" class="form-control" id="stationIDSearch" />
+              	<span class="input-group-btn">
+					        <button class="btn btn-primary" type="button" id="searchBtn">
+					        	<span class="glyphicon glyphicon-search"></span>
+					        </button>
+					      </span>
+            	</div>
+            </p>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/index.js"></script>
+  </body>
 </html>
