--- a/html/index.html
+++ b/html/index.html
@@ -9,11 +9,12 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>PWS | Personal Weather Station</title>
+    <title>PWS View</title>
 
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500' rel='stylesheet' type='text/css'>
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/pwsview.css" rel="stylesheet">
+    <script src="assets/js/chart.min.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -24,49 +25,136 @@
 
   <body>
 
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">PWS View</h3>
-              <ul class="nav masthead-nav">
-                <li class="active"><a href="/">View</a></li>
-                <li><a href="#">Setup Your Own</a></li>
-                <li><a href="#">Support Us</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <h1 class="cover-heading">Personal Weather Station</h1>
-            <p class="lead">Type in your favorite personal weather station below.</p>
-            <p class="lead">
-            	<div class="input-group">
-              	<input type="text" placeholder="Weather Underground Station ID" class="form-control" id="stationIDSearch" />
-              	<span class="input-group-btn">
-					        <button class="btn btn-primary" type="button" id="searchBtn">
-					        	<span class="glyphicon glyphicon-search"></span>
-					        </button>
-					      </span>
-            	</div>
-            </p>
-          </div>
-
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">PWS View</a>
         </div>
-
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Support Us</a></li>
+          </ul>
+          <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control main-search" placeholder="Station ID">
+              <span class="sr-only">
+                <button type="submit" class="btn btn-default">Search</button>
+              </span>
+            </div>
+          </form>
+        </div><!--/.nav-collapse -->
       </div>
-
     </div>
 
+    <div class="container">
+
+      <div class="main-content">
+        <h1>STATIONID</h1>
+        <p class="lead">The current weather at this station is</p>
+
+        <div class="row">
+          <div class="col-sm-5 col-md-4">
+            <div class="panel">
+              <div class="panel-body">
+                <img src="assets/img/meteocons/sunny.svg" class="img-responsive center-block" style="max-height: 200px;" />
+              </div>
+            </div>
+            <div class="panel">
+              <div class="panel-body">
+                <div class="weather-info text-center">
+                  <span class="temperature">68&deg;</span><span class="temperature">32&deg;</span>
+                </div>
+                <div class="weather-info text-left">
+                  <table class="table table-striped table-responsive">
+                    <tr>
+                      <th scope="row">
+                        Humidity
+                      </th>
+                      <td>
+                        80%
+                      </td>
+                    </tr>
+                    <tr>
+                      <th scope="row">
+                        Dew Point
+                      </th>
+                      <td>
+                        54&deg;
+                      </td>
+                    </tr>
+                    <tr>
+                      <th scope="row">
+                        Wind Speed
+                      </th>
+                      <td>
+                        5 mph
+                      </td>
+                    </tr>
+                    <tr>
+                      <th scope="row">
+                        Wind Direction
+                      </th>
+                      <td>
+                        South
+                      </td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-7 col-md-8">
+            <canvas id="canvas" height="450" width="700"></canvas>
+          </div>
+        </div>
+      </div>
+
+    </div><!-- /.container -->
+
+    <footer>
+      <div class="container">
+        <p class="text-muted">&copy; 2014 <a href="https://github.com/markkwasnick">Mark Kwasnick</a> &amp; <a href="https://github.com/jthill57">Josh Hill</a></p>
+      </div>
+    </footer>
+
+    <script>
+
+      var lineChartData = {
+        labels : ["January","February","March","April","May","June","July"],
+        datasets : [
+          {
+            fillColor : "rgba(220,220,220,0.5)",
+            strokeColor : "rgba(220,220,220,1)",
+            pointColor : "rgba(220,220,220,1)",
+            pointStrokeColor : "#fff",
+            data : [65,59,90,81,56,55,40]
+          },
+          {
+            fillColor : "rgba(151,187,205,0.5)",
+            strokeColor : "rgba(151,187,205,1)",
+            pointColor : "rgba(151,187,205,1)",
+            pointStrokeColor : "#fff",
+            data : [28,48,40,19,96,27,100]
+          }
+        ]
+
+      }
+
+    var myLine = new Chart(document.getElementById("canvas").getContext("2d")).Line(lineChartData);
+
+    </script>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
